--- a/website/templates/allproducts.html
+++ b/website/templates/allproducts.html
@@ -1,24 +1,26 @@
 {% extends 'base.html' %}
-{% block title %}Home{% endblock %}
+
+{% block title %}All Products {% endblock %}
 
 {% block content %}
 <div class="container">
-
-    <h1 class="text-center">Swagatam xa ! </h1>
-    <hr>
-    <div class="row mt-3">
-        {% for p in product_list %}
+    <h3>All Products</h3><hr>
+    {% for cat in allcategories %}
+    <h4>{{cat.title}}</h4><hr>
+    <div class="row">
+        {% for p in cat.product_set.all %}
         <div class="col-md-3">
             <div class="m-4">
-
-            
-        <h4><a href="{% url 'ecomapp:productdetail' p.slug %}">{{p.title}}</a></h4>
+            <h4><a href="{% url 'ecomapp:productdetail' p.slug %}">{{p.title}}</a></h4>
             <img src="{{p.image.url}}" alt="" class="img-fluid" style="height: 2500; object-fit: cover;">
             <p class="mt-3">Price: <strike>Rs. {{p.marked_price}}</strike>Rs. {{p.selling_price}}</p>
             <a href="" class="btn btn-primary">Add to cart </a>
         </div>
         </div>
         {% endfor %}
+
     </div>
+    {% endfor %}
 </div>
+
 {% endblock %}
