--- a/website/templates/productdetail.html
+++ b/website/templates/productdetail.html
@@ -13,7 +13,7 @@
             <h4>{{product.title}} (Viewd {{product.view_count}} times)</h4>
             <h5>Category: {{product.category}}</h5>
             <h5>Price: <strike>Rs. {{product.marked_price}}</strike>Rs. {{product.selling_price}}</h5>
-            <a href="" class="btn btn-info">Add to cart </a>
+            <a href="{% url 'ecomapp:addtocart' product.id %}" class="btn btn-info">Add to cart </a>
             <hr>
             <p class="text-info">Warranty: {{product.Warranty}}</p>
             <p class="text-info">Return Policy:{{product.return_policy}}</p>
