--- a/website/templates/mycart.html
+++ b/website/templates/mycart.html
@@ -27,15 +27,16 @@
                         <td>{{cp.quantity}}</td>
                         <td>{{cp.subtotal}}</td>
                         <td>
-                            <a href="" class="btn btn-primary"> + </a>
-                            <a href="" class="btn btn-warning"> - </a>
-                            <a href="" class="btn btn-danger"> x </a>
+                            <a href="{% url 'ecomapp:managecart' cp.id %}?action=inc" class="btn btn-primary"> + </a>
+                            <a href="{% url 'ecomapp:managecart' cp.id %}?action=dcr" class="btn btn-warning"> - </a>
+                            <a href="{% url 'ecomapp:managecart' cp.id %}?action=rmv" class="btn btn-danger"> x </a>
                         </td>
                     </tr>
                     {% endfor %}
                     <tr>
                         <th colspan="4" class="text-right">Total</th>
-                        <th>Rs. {{cart.total}}</th>   
+                        <th>Rs. {{cart.total}}</th>
+                         
                     </tr>
                 </tbody>
             </table>
