--- a/website/templates/mycart.html
+++ b/website/templates/mycart.html
@@ -40,6 +40,11 @@
                         <th><a href="{% url 'ecomapp:emptycart' %}">Empty Cart</a></th>
                         {% endif %} 
                     </tr>
+                    {% if cart.cartproduct_set.all %}
+                    <tr>
+                        <th><a class="btn btn-info" href="{% url 'ecomapp:checkout'%}">checkout</a></th>
+                    </tr>
+                    {% endif %}
                 </tbody>
             </table>
         </div>
