--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -13,6 +13,14 @@
     <a href="{% url 'ecomapp:contact' %}">Contact</a>
     <a href="{% url 'ecomapp:allproducts' %}">Categories</a>
     <a href="{% url 'ecomapp:mycart' %}">View Cart</a>
+
+    {% if request.user.customer %}
+    welcome {{request.user.username}}!
+    <a href="{% url 'ecomapp:customerlogout' %}">Logout</a>
+    {% else %}
+    <a href="{% url 'ecomapp:customerregistration' %}">Register</a>
+    <a href="{% url 'ecomapp:customerlogin' %}">Login</a>
+    {% endif %}
     </div>
     <hr>
     
