--- a/website/templates/adminpages/adminorderdetail.html
+++ b/website/templates/adminpages/adminorderdetail.html
@@ -40,6 +40,18 @@
                 </tr>
             </tbody>
         </table>
+        <form action="{% url 'ecomapp:adminorderstatuschange' ord_obj.id %}" method="POST">
+            {% csrf_token %}
+            <select name="status">
+                {% for i, j in allstatus %}
+                {% comment %} jun order status chahine ho , tesko logic code.. {% endcomment %}
+                <option value="{{i}}" {% if i == ord_obj.order_status %}selected{% endif %}>{{j}}</option>
+                {% endfor %}
+            </select>
+            <button class="btn btn-info">Change</button>
+            
+        </form>
+
     </div>
 </div>
 </div>
