using pagination and also adding bootstrap

--- a/website/templates/customerorderdetail.html
+++ b/website/templates/customerorderdetail.html
@@ -35,8 +35,8 @@
                 </tr>
                 {% endfor %}
                 <tr>
-                    <th colspan="4" class="text-right">Total:</th>
-                    <th>Rs. {{ord_obj.total|intcomma}}</th>
+                    <span><th colspan="4" class="text-right"></th></span>
+                    <th>Total=  Rs. {{ord_obj.total|intcomma}}</th>
                 </tr>
             </tbody>
         </table>
