--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
+
 {% block title %}About{% endblock %}
 
 {% block content %}
-<h1>About</h1>
-
+<div class="container mt-5">
+    <h1 class="text-center">About</h1>
+    <hr>
+    <p class="text-center">Thank you for visiting!</p>
+</div>
 {% endblock %}
