--- a/website/templates/addtocart.html
+++ b/website/templates/addtocart.html
@@ -1,8 +1,20 @@
 {% extends 'base.html' %}
-{% block title %}Add to cart {% endblock %}
+{% block title %}Add to Cart{% endblock %}
 
 {% block content %}
-<div class="container">
-    <h3>Product added to cart successfully.</h3>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="alert alert-success text-center" role="alert">
+                <h4 class="alert-heading">Success!</h4>
+                <p>Your product has been added to the cart successfully.</p>
+                <hr>
+                <p class="mb-0">
+                    You can <a href="{% url 'ecomapp:mycart' %}" class="btn btn-secondary">View your cart</a> or 
+                    <a href="{% url 'ecomapp:home' %}" class="btn btn-secondary">Continue Shopping</a>.
+                </p>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
