--- a/website/templates/adminpages/adminbase.html
+++ b/website/templates/adminpages/adminbase.html
@@ -7,14 +7,29 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="container">
-        <a href="{% url 'ecomapp:adminhome' %}">Home</a>
-        <a href="{% url 'ecomapp:adminorderlist' %}">All Orders</a> |
-        <a href="{% url 'ecomapp:home'%}" target="_blank">Visit site </a>
+    <div class="container mt-4">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand text-info" href="{% url 'ecomapp:adminhome' %}">Admin Dashboard</a>
+            <div class="collapse navbar-collapse">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link text-info" href="{% url 'ecomapp:adminorderlist' %}">All Orders</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-info" href="{% url 'ecomapp:home' %}" target="_blank">Visit Site</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </div>
 
-    {% block content %}
+    <div class="container mt-4">
+        {% block content %}
+        {% endblock %}
+    </div>
 
-    {% endblock %}
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
