--- a/website/templates/adminpages/adminhome.html
+++ b/website/templates/adminpages/adminhome.html
@@ -1,20 +1,21 @@
 {% extends "adminpages/adminbase.html" %}
 
-{% block title %}Admin Home {% endblock %}
+{% block title %}Admin Home{% endblock %}
+{% load humanize %}
 
 {% block content %}
-<div class="container">
+<div class="container mt-4">
     <div class="row">
-        <div class="col-md-12">
-            {% comment %} order baisakeko haru dekhauxa {% endcomment %}
+        <div class="col-md-12 text-info">
             <h3>Pending Orders</h3>
-            <table class="table">
+            <hr>
+            <table class="table table-striped">
                 <thead>
                     <tr>
                         <th>SN</th>
-                        <th>Order ID </th>
+                        <th>Order ID</th>
                         <th>Customer</th>
-                        <th>Ordered On </th>
+                        <th>Ordered On</th>
                         <th>Amount</th>
                     </tr>
                 </thead>
@@ -24,16 +25,17 @@
                         <td>{{forloop.counter}}</td>
                         <td><a href="{% url 'ecomapp:adminorderdetail' order.id %}">#ORDER_{{order.id}}</a></td>
                         <td>{{order.ordered_by}}</td>
-                        <td>{{order.created_at}}</td>
-                        <td>{{order.total}}</td>
+                        <td>{{order.created_at|date:"d M Y H:i"}}</td>
+                        <td>Rs. {{order.total|intcomma}}</td>
+                    </tr>
+                    {% empty %}
+                    <tr>
+                        <td colspan="5" class="text-center">No pending orders found.</td>
                     </tr>
                     {% endfor %}
                 </tbody>
             </table>
         </div>
     </div>
-
-    
 </div>
-
 {% endblock %}
