--- a/website/templates/adminpages/adminlogin.html
+++ b/website/templates/adminpages/adminlogin.html
@@ -1,23 +1,35 @@
 {% extends "adminpages/adminbase.html" %}
 
-{% block title %}Admin Login {% endblock %}
+{% block title %}Admin Login{% endblock %}
 
 {% block content %}
 <style>
-    .errorlist{
+    .errorlist {
         color: red;
     }
+    .login-container {
+        margin-top: 50px;
+    }
 </style>
-<div class="container">
+
+<div class="container login-container">
     <div class="row">
         <div class="col-md-6 mx-auto">
-            <h3>Admin Login Form </h3><hr>
+            <h3 class="text-center text-info">Admin Login Form</h3>
+            <hr>
             <form action="" method="POST">
                 {% csrf_token %}
-                {{form.as_p}}
-                <button class="btn btn-primary">Login as a Admin </button>
+                <div class="form-group">
+                    {{ form.as_p }}
+                </div>
+                <button class="btn btn-secondary btn-block">Login as Admin</button>
+                
                 {% if error %}
-                <li style='color: red;'>{{error}}</li>
+                    <div class="mt-3 alert alert-danger">
+                        <ul class="errorlist">
+                            <li>{{ error }}</li>
+                        </ul>
+                    </div>
                 {% endif %}
             </form>
         </div>
