--- a/website/templates/adminpages/adminorderlist.html
+++ b/website/templates/adminpages/adminorderlist.html
@@ -1,33 +1,37 @@
 {% extends 'adminpages/adminbase.html' %}
 
-{% block title %}All Orders {% endblock %}
+{% block title %}All Orders{% endblock %}
+{% load humanize %}
 
 {% block content %}
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h3>All Orders</h3><hr>
+            <h3 class="text-info">All Orders</h3><hr>
             <table class="table">
                 <thead>
                     <tr>
                         <th>SN</th>
-                        <th>Order ID </th>
+                        <th>Order ID</th>
                         <th>Customer</th>
                         <th>Ordered On</th>
                         <th>Amount</th>
                         <th>Status</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for order in allorders %}
                     <tr>
-                        <td>{{forloop.counter}}</td>
-                        <td><a href="{% url 'ecomapp:adminorderdetail' order.id %}">#ORDER_{{order.id}}</a></td>
-                        <td>{{order.ordered_by}}</td>
-                        <td>{{order.created_at}}</td>
-                        <td>{{order.total}}</td>
-                        <td>{{order.order_status}}</td>
-            
+                        <td>{{ forloop.counter }}</td>
+                        <td><a href="{% url 'ecomapp:adminorderdetail' order.id %}">#ORDER_{{ order.id }}</a></td>
+                        <td>{{ order.ordered_by }}</td>
+                        <td>{{ order.created_at|timesince }} ago</td>
+                        <td>Rs. {{ order.total|intcomma }}</td>
+                        <td>{{ order.order_status }}</td>
+                        <td>
+                            <a href="{% url 'ecomapp:adminorderdetail' order.id %}" class="btn btn-info btn-sm">View</a> 
+                        </td>
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -36,4 +40,5 @@
     </div>
 </div>
 {% endblock %}
+
 
