--- a/website/templates/allproducts.html
+++ b/website/templates/allproducts.html
@@ -1,26 +1,36 @@
 {% extends 'base.html' %}
 
-{% block title %}All Products {% endblock %}
+{% block title %}All Products{% endblock %}
 
 {% block content %}
-<div class="container">
-    <h3>All Products</h3><hr>
+<div class="container mt-5">
+    <h2 class="text-center text-info">All Products</h2>
+    <hr class="mb-5">
+
     {% for cat in allcategories %}
-    <h4>{{cat.title}}</h4><hr>
-    <div class="row">
+    <h3 class="text-info">{{ cat.title }}</h3>
+    <hr>
+    <div class="row g-4">
         {% for p in cat.product_set.all %}
         <div class="col-md-3">
-            <div class="m-4">
-            <h4><a href="{% url 'ecomapp:productdetail' p.slug %}">{{p.title}}</a></h4>
-            <img src="{{p.image.url}}" alt="" class="img-fluid" style="height: 2500; object-fit: cover;">
-            <p class="mt-3">Price: <strike>Rs. {{p.marked_price}}</strike>Rs. {{p.selling_price}}</p>
-            <a href="{% url 'ecomapp:addtocart' p.id %}" class="btn btn-primary">Add to cart </a>
-        </div>
+            <div class="card shadow-sm">
+                <img src="{{ p.image.url }}" alt="{{ p.title }}" class="card-img-top" style="height: 200px; object-fit: cover;">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <a href="{% url 'ecomapp:productdetail' p.slug %}" class="text-decoration-none text-dark">{{ p.title }}</a>
+                    </h5>
+                    <p class="card-text text-muted">
+                        <small><strike>Rs. {{ p.marked_price }}</strike></small>
+                        <strong>Rs. {{ p.selling_price }}</strong>
+                    </p>
+                    <a href="{% url 'ecomapp:addtocart' p.id %}" class="btn btn-secondary w-100">Add to Cart</a>
+
+                </div>
+            </div>
         </div>
         {% endfor %}
-
     </div>
+    <hr class="my-5">
     {% endfor %}
 </div>
-
 {% endblock %}
