--- a/website/templates/checkout.html
+++ b/website/templates/checkout.html
@@ -1,16 +1,17 @@
 {% extends "base.html" %}
 
-{% block title %}Checkout{% endblock %}
+{% block title %} Checkout {% endblock %}
 
 {% block content %}
 
-<div class="container">
+<div class="container mt-5">
     <div class="row">
+        <!-- Cart Details -->
         <div class="col-md-6">
-            <h3>Items in the cart </h3>
-            <a href="{% url 'ecomapp:mycart' %}">Update Cart </a>
-            <table class="table">
-                <thead>
+            <h3 class="text-center text-info">Items in the Cart</h3>
+            <a href="{% url 'ecomapp:mycart' %}" class="btn btn-secondary">Update Cart</a>
+            <table class="table table-bordered table-striped mt-3">
+                <thead class="thead-dark">
                     <tr>
                         <th>SN</th>
                         <th>Product</th>
@@ -22,30 +23,33 @@
                 <tbody>
                     {% for cp in cart.cartproduct_set.all %}
                     <tr>
-                        <td>{{forloop.counter}}</td>
-                        <td>{{cp.product.title}}</td>
-                        <td>{{cp.rate}}</td>
-                        <td>{{cp.quantity}}</td>
-                        <td>{{cp.subtotal}}</td>
+                        <td>{{ forloop.counter }}</td>
+                        <td>{{ cp.product.title }}</td>
+                        <td>Rs. {{ cp.rate }}</td>
+                        <td>{{ cp.quantity }}</td>
+                        <td>Rs. {{ cp.subtotal }}</td>
                     </tr>
                     {% endfor %}
                     <tr>
                         <th colspan="4" class="text-right">Total</th>
-                        <th>Rs.{{cart.total}}</th>
+                        <th>Rs. {{ cart.total }}</th>
                     </tr>
                 </tbody>
             </table>
         </div>
+
+        <!-- Checkout Form -->
         <div class="col-md-6">
-            <h3>Checkout Form </h3>
+            <h3 class="text text-info">Checkout Form</h3>
             <form action="" method="POST">
                 {% csrf_token %}
-                {{form.as_p}}
-                <button class="btn btn-info">Place Order </button>
+                <div class="form-group">
+                    {{ form.as_p }}
+                </div>
+                <button type="submit" class="btn btn-secondary btn-lg w-100 mt-4">Place Order</button>
             </form>
         </div>
     </div>
 </div>
 
 {% endblock %}
-    
