--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,8 +1,13 @@
 {% extends 'base.html' %}
-{% block title %}About{% endblock %}
+
+{% block title %}Contact{% endblock %}
 
 {% block content %}
-<h1>Contact me:</h1>
-<p>9818110430</p>
-
+<div class="container mt-5">
+    <h1 class="text-center">Contact Me</h1>
+    <p class="text-center">You can reach me at:</p>
+    <p class="text-center">
+        <a href="tel:+9779818110430" class="btn btn-info">Call: 9818110430</a>
+    </p>
+</div>
 {% endblock %}
