--- a/website/templates/customerorderdetail.html
+++ b/website/templates/customerorderdetail.html
@@ -1,47 +1,55 @@
 {% extends "base.html" %}
 {% load humanize %}
 
-{% block title %}Order Detail {% endblock %}
+{% block title %}Order Detail{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container mt-5">
     <div class="row">
         <div class="col-md-8 mx-auto">
-        <h3>Order Detail</h3><hr>
-        <p><span class="font-weight-bold">Order ID: </span>#ORDER_{{ord_obj.id}}</p>
-        <p><span class="font-weight-bold">Order Status: </span>{{ord_obj.order_status}}</p>
-        <p><span class="font-weight-bold">Order On: </span>{{ord_obj.created_at|timesince}} ago</p>
-        <p><span class="font-weight-bold">Customer Information: </span>By {{ord_obj.ordered_by}}, {{ord_obj.mobile}}</p>
-        <p><span class="font-weight-bold">Shipping Address: </span>By {{ord_obj.shipping_address}} ({{ord_obj.email}})</p>
-        <h4>Ordered Items</h4>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>SN</th>
-                    <th>Item</th>
-                    <th>Rate</th>
-                    <th>Quantity</th>
-                    <th>Subtotal</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for cp in ord_obj.cart.cartproduct_set.all %}
-                <tr>
-                    <td>{{forloop.counter}}</td>
-                    <td><a target="_blank" href="{% url 'ecomapp:productdetail' cp.product.slug %}">{{cp.product.title}}({{cp.product.id}})</a></td>
-                    <td>{{cp.rate}}</td>
-                    <td>{{cp.quantity}}</td>
-                    <td>{{cp.subtotal}}</td>
-                </tr>
-                {% endfor %}
-                <tr>
-                    <span><th colspan="4" class="text-right"></th></span>
-                    <th>Total=  Rs. {{ord_obj.total|intcomma}}</th>
-                </tr>
-            </tbody>
-        </table>
+            <h3 class="text-center text-info">Order Detail</h3>
+            <hr>
+
+            <p><span class="font-weight-bold">Order ID:</span> #ORDER_{{ ord_obj.id }}</p>
+            <p><span class="font-weight-bold">Order Status:</span> {{ ord_obj.order_status }}</p>
+            <p><span class="font-weight-bold">Order On:</span> {{ ord_obj.created_at|timesince }} ago</p>
+            <p><span class="font-weight-bold">Customer Information:</span> By {{ ord_obj.ordered_by }}, {{ ord_obj.mobile }}</p>
+            <p><span class="font-weight-bold">Shipping Address:</span> {{ ord_obj.shipping_address }} ({{ ord_obj.email }})</p>
+
+            <h4 class="mt-4 text-info">Ordered Items</h4>
+            <table class="table table-bordered table-striped">
+                <thead>
+                    <tr>
+                        <th>SN</th>
+                        <th>Item</th>
+                        <th>Rate</th>
+                        <th>Quantity</th>
+                        <th>Subtotal</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for cp in ord_obj.cart.cartproduct_set.all %}
+                    <tr>
+                        <td>{{ forloop.counter }}</td>
+                        <td>
+                            <a target="_blank" href="{% url 'ecomapp:productdetail' cp.product.slug %}">
+                                {{ cp.product.title }} ({{ cp.product.id }})
+                            </a>
+                        </td>
+                        <td>Rs. {{ cp.rate }}</td>
+                        <td>{{ cp.quantity }}</td>
+                        <td>Rs. {{ cp.subtotal }}</td>
+                    </tr>
+                    {% endfor %}
+                    <tr>
+                        <th colspan="4" class="text-right">Total</th>
+                        <th>Rs. {{ ord_obj.total|intcomma }}</th>
+                    </tr>
+                </tbody>
+            </table>
+
+        </div>
     </div>
-</div>
 </div>
 
 {% endblock %}
