--- a/website/templates/mycart.html
+++ b/website/templates/mycart.html
@@ -1,56 +1,63 @@
 {% extends 'base.html' %}
 
-{% block title %} My cart{% endblock %}
+{% block title %} My Cart {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container mt-5">
     <div class="row">
-        <div class="col-md-8">
-            <h4>Items in my cart</h4><hr>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>SN</th>
-                        <th>Product</th>
-                        <th>Rate</th>
-                        <th>Quantity</th>
-                        <th>Subtotal</th>
-                        <th>Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for cp in cart.cartproduct_set.all %}
-                    <tr>
-                        <td>{{forloop.counter}}</td>
-                        <td>{{cp.product.title}}</td>
-                        <td>{{cp.rate}}</td>
-                        <td>{{cp.quantity}}</td>
-                        <td>{{cp.subtotal}}</td>
-                        <td>
-                            <a href="{% url 'ecomapp:managecart' cp.id %}?action=inc" class="btn btn-primary"> + </a>
-                            <a href="{% url 'ecomapp:managecart' cp.id %}?action=dcr" class="btn btn-warning"> - </a>
-                            <a href="{% url 'ecomapp:managecart' cp.id %}?action=rmv" class="btn btn-danger"> x </a>
-                        </td>
-                    </tr>
-                    {% endfor %}
+        <div class="col-md-12">
+            <h3 class="text-center text-info">My Cart</h3><hr>
 
-                    <tr>
-                        <th colspan="4" class="text-right"></th>
-                        <th>Total=  Rs. {{cart.total}}</th>
+            <!-- Cart Table -->
+            <div class="table-responsive">
+                <table class="table table-bordered table-striped">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th>SN</th>
+                            <th>Product</th>
+                            <th>Rate</th>
+                            <th>Quantity</th>
+                            <th>Subtotal</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for cp in cart.cartproduct_set.all %}
+                        <tr>
+                            <td>{{ forloop.counter }}</td>
+                            <td>{{ cp.product.title }}</td>
+                            <td>Rs. {{ cp.rate }}</td>
+                            <td>{{ cp.quantity }}</td>
+                            <td>Rs. {{ cp.subtotal }}</td>
+                            <td>
+                                <a href="{% url 'ecomapp:managecart' cp.id %}?action=inc" class="btn btn-success btn-sm"> + </a>
+                                <a href="{% url 'ecomapp:managecart' cp.id %}?action=dcr" class="btn btn-warning btn-sm"> - </a>
+                                <a href="{% url 'ecomapp:managecart' cp.id %}?action=rmv" class="btn btn-danger btn-sm"> x </a>
+                            </td>
+                        </tr>
+                        {% endfor %}
+
+                        <!-- Total and Actions -->
+                        <tr>
+                            <th colspan="4" class="text-right">Total:</th>
+                            <th>Rs. {{ cart.total }}</th>
+                            {% if cart.cartproduct_set.all %}
+                            <td>
+                                <a href="{% url 'ecomapp:emptycart' %}" class="btn btn-danger btn-sm">Empty Cart</a>
+                            </td>
+                            {% endif %}
+                        </tr>
+
                         {% if cart.cartproduct_set.all %}
-                        <th><a href="{% url 'ecomapp:emptycart' %}">Empty Cart</a></th>
-                        {% endif %} 
-                    </tr>
-
-
-
-                    {% if cart.cartproduct_set.all %}
-                    <tr>
-                        <th><a class="btn btn-info" href="{% url 'ecomapp:checkout'%}">checkout</a></th>
-                    </tr>
-                    {% endif %}
-                </tbody>
-            </table>
+                        <tr>
+                            <td colspan="6" class="text-center">
+                                <a class="btn btn-secondary w-10" href="{% url 'ecomapp:checkout' %}">Proceed to Checkout</a>
+                            </td>
+                        </tr>
+                        {% endif %}
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
