--- a/website/templates/productdetail.html
+++ b/website/templates/productdetail.html
@@ -1,26 +1,43 @@
 {% extends 'base.html' %}
 
-{% block title %} {{product.title}} {% endblock %}
+{% block title %} {{ product.title }} {% endblock %}
 
 {% block content %}
-<div class="container">
-    <h3>{{product.title}}</h3><hr>
-    <div class="row">
+<div class="container mt-5">
+    <h2 class="">{{ product.title }}</h2>
+    <hr class="mb-4">
+    <div class="row g-4">
+        <!-- Product Image -->
         <div class="col-md-4">
-            <img src="{{product.image.url}}" alt="" class="img-fluid" width="400">
+            <img src="{{ product.image.url }}" alt="{{ product.title }}" class="img-fluid rounded shadow" style="object-fit: cover;">
         </div>
+
+        <!-- Product Details -->
         <div class="col-md-8">
-            <h4>{{product.title}} (Viewd {{product.view_count}} times)</h4>
-            <h5>Category: {{product.category}}</h5>
-            <h5>Price: <strike>Rs. {{product.marked_price}}</strike>Rs. {{product.selling_price}}</h5>
-            <a href="{% url 'ecomapp:addtocart' product.id %}" class="btn btn-info">Add to cart </a>
+            <h4 class="">{{ product.title }} 
+                <small class="">(Viewed {{ product.view_count }} times)</small>
+            </h4>
+            <h5 class="">Category: {{ product.category }}</h5>
+            <h5 class="text-secondary">
+                <small><strike>Rs. {{ product.marked_price }}</strike></small>
+                <strong>Rs. {{ product.selling_price }}</strong>
+            </h5>
+            <a href="{% url 'ecomapp:addtocart' product.id %}" class="btn btn-secondary mt-3">Add to Cart</a>
+            
+            <hr class="mt-4">
+            
+            <!-- Warranty and Return Policy -->
+            <div class="mb-3">
+                <p class=""><strong>Warranty:</strong> {{ product.Warranty }}</p>
+                <p class=""><strong>Return Policy:</strong> {{ product.return_policy }}</p>
+            </div>
+            
             <hr>
-            <p class="text-info">Warranty: {{product.Warranty}}</p>
-            <p class="text-info">Return Policy:{{product.return_policy}}</p>
-            <hr>
-            <p>{{product.description}}</p>
+
+            <!-- Description -->
+            <h5 class="">Description:</h5>
+            <p>{{ product.description }}</p>
         </div>
     </div>
 </div>
-
 {% endblock %}
