Multiple Image Upload for a Product

--- a/website/templates/adminpages/adminbase.html
+++ b/website/templates/adminpages/adminbase.html
@@ -16,6 +16,9 @@
                         <a class="nav-link text-info" href="{% url 'ecomapp:adminorderlist' %}">All Orders</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link text-info" href="{% url 'ecomapp:adminproductlist' %}">All Products</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link text-info" href="{% url 'ecomapp:home' %}" target="_blank">Visit Site</a>
                     </li>
                 </ul>
