--- a/website/templates/productdetail.html
+++ b/website/templates/productdetail.html
@@ -10,6 +10,15 @@
         <!-- Product Image -->
         <div class="col-md-4">
             <img src="{{ product.image.url }}" alt="{{ product.title }}" class="img-fluid rounded shadow" style="object-fit: cover;">
+            <div class="row">
+                {% for pi in product.productimage_set.all %}
+                <div class="col-md-4 p-3">
+                    <a href="{{pi.image.url}}" target="_blank">
+                    <img src="{{pi.image.url}}" class="img-fluid" style="height: 100px; object-fit: contain;" alt="">
+                    </a>
+                </div>
+                {% endfor %}
+            </div>
         </div>
 
         <!-- Product Details -->
