--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -61,7 +61,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'ecomapp:home' %}">Umesh7</a>
+            <a class="navbar-brand" href="{% url 'ecomapp:home' %}">MiniMart - Budget eCommerce Store</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -109,7 +109,7 @@
 
     <!-- Footer -->
     <footer class="text-center py-3 mt-4">
-        <p>&copy; 2024 Umesh7. All Rights Reserved.</p>
+        <p>&copy; 2025 Binod7. All Rights Reserved.</p>
     </footer>
 
     <!-- Js Scripts -->
