--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container mt-5">
 
-    <h1 class="text-center text-info">स्वागत छ !</h1>
+    <h1 class="text-center text-info">MiniMart - Budget eCommerce Store</h1>
     <hr class="mb-5">
 
     <!-- Product Grid -->
